Make inferences and save them in json files

--- a/infer_v6.ipynb
+++ b/infer_v6.ipynb
@@ -261,8 +261,9 @@
         "# Initialize list to store responses\n",
         "inference_c0_json = []\n",
         "\n",
-        "# Iterate through each column in power_subset1_\n",
-        "for col_name, col_data in powerSubset2023[:1500].items():\n",
+        "# Iterate through each column in powerset\n",
+        "\n",
+        "for col_name, col_data in powerSubset2023[:1500].items(): #please change powerSubset2023[:1500] to powerset\n",
         "  # print(col_data.dropna().tolist())\n",
         "  # Define the strict JSON prompt\n",
         "\n",
@@ -460,7 +461,7 @@
       "metadata": {
         "id": "Oxw8WKhP1ze3"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
