This is the most up to date script for creating inferences;
Input --> Powerset created in the script powerset.ipynb

This script asks user for 
1. dataset input --> Dataset input No. is 4
2. how many inference they want --> 3, 6, 9, 14

Build_prompt function dynamically updates the prompt  to generate inference for:
1. Single dataset
2. Combination of 2 dataset
3. Combination of 3 dataset
4. Combination of 4 dataset

Saves them all in one json file

--- a/infer_condition2.ipynb
+++ b/infer_condition2.ipynb
@@ -42,7 +42,7 @@
       "source": [
         "import openai\n",
         "\n",
-        "openai.api_key = 'read API key'\n",
+        "openai.api_key = ''\n",
         "\n",
         "# tokenizer = AutoTokenizer.from_pretrained(\"gpt2\")  # GPT-3.5 & GPT-4 use GPT-2 tokenizer\n",
         "\n",
@@ -83,7 +83,7 @@
       "metadata": {
         "id": "NO7r4K6ZiQ3z"
       },
-      "execution_count": 3,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -94,25 +94,15 @@
         "from bs4 import BeautifulSoup\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
-        "import json"
+        "import json\n",
+        "import datetime\n",
+        "from pathlib import Path"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4PFs-jGsmVHV",
-        "outputId": "97e96712-3583-43e6-828b-5e5107ec64de"
+        "id": "4PFs-jGsmVHV"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -122,30 +112,7 @@
       "metadata": {
         "id": "2wo2rXSeCiPD"
       },
-      "execution_count": 5,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def save_inference_json(inference_data, inference_no, columns_used):\n",
-        "    \"\"\"Saves the inference data to a JSON file with an automated filename.\"\"\"\n",
-        "    base_dir = \"/content/drive/MyDrive/Dissertation/Study 1/Inference_data\"\n",
-        "\n",
-        "    # Create a descriptive filename based on inference number and columns\n",
-        "    column_names = \"_\".join([col.split(\"_\")[1] for col in columns_used])\n",
-        "    filename = f\"inferences_{inference_no}_{len(columns_used)}cols_{column_names}.json\"\n",
-        "    output_filename = f\"{base_dir}/{filename}\"\n",
-        "\n",
-        "    with open(output_filename, \"w\", encoding=\"utf-8\") as f:\n",
-        "        json.dump(inference_data, f, indent=4, ensure_ascii=False)\n",
-        "\n",
-        "    print(f\"✅ JSON saved successfully as {output_filename}\")"
-      ],
-      "metadata": {
-        "id": "fQVZahjI1hr1"
-      },
-      "execution_count": 3,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -164,12 +131,22 @@
         "\n",
         "\n",
         "# Drop duplicate values in the specified column, keeping the first occurrence\n",
-        "powerset2023 = powerset2023.drop_duplicates(subset=['takeout1_chrome_MyActivity_Search Title'], keep='first')"
+        "powerset2023 = powerset2023.drop_duplicates(subset=['takeout1_chrome_MyActivity_Search Title'], keep='first')\n",
+        "\n",
+        "powerset2023 = powerset2023.rename(columns={\n",
+        "    \"old_header2\": \"new_name2\",\n",
+        "    \"takeout1_imageSearch_MyActivity_Search Title\" : \"Image_Search\",\n",
+        "    \"takeout1_chrome_MyActivity_Search Title\" : \"Browser_history\",\n",
+        "    \"takeout1_maps_MyActivity_Search Title\" : \"Location_history\",\n",
+        "    \"takeout1_YT_search-history_Search Title\" : \"YT_search_history\",\n",
+        "    \"takeout1_YT_watch-history_Search Title\" : \"YT_watch_history\",\n",
+        "    \"takeout1_misc_MyActivity_Search Title\" : \"Misc\"\n",
+        "    })"
       ],
       "metadata": {
         "id": "7UyVcx9OPmrg"
       },
-      "execution_count": 6,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -217,39 +194,10 @@
         "print(\"\\nSelected DataFrame:\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CxDLyhx6PGBK",
-        "outputId": "db946675-72ac-4632-b7bd-c5cc2072e6ba"
+        "id": "CxDLyhx6PGBK"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "Please select four datasets from the options (datasets should not be the same):\n",
-            "1. takeout1_imageSearch_MyActivity_Search Title\n",
-            "2. takeout1_chrome_MyActivity_Search Title\n",
-            "3. takeout1_maps_MyActivity_Search Title\n",
-            "4. takeout1_YT_search-history_Search Title\n",
-            "5. takeout1_YT_watch-history_Search Title\n",
-            "6. takeout1_misc_MyActivity_Search Title\n",
-            "\n",
-            "Select column 1 by number (1-6): 1\n",
-            "\n",
-            "Select column 2 by number (1-6): 2\n",
-            "\n",
-            "Select column 3 by number (1-6): 4\n",
-            "\n",
-            "Select column 4 by number (1-6): 6\n",
-            "\n",
-            "Selected DataFrame:\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -305,31 +253,10 @@
         "# inference_input = int(inference_input)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "08Y43axPSFXV",
-        "outputId": "f0542c20-d829-450e-db2d-05f1e5741215"
+        "id": "08Y43axPSFXV"
       },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Please select a number from the options below by typing the corresponding number:\n",
-            "\n",
-            "1. 3\n",
-            "2. 6\n",
-            "3. 9\n",
-            "4. 12\n",
-            "\n",
-            "Enter your selection (1-4): 1\n",
-            "\n",
-            "You selected: 3\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -354,30 +281,50 @@
       "metadata": {
         "id": "TUR2HR-8DnM3"
       },
-      "execution_count": 12,
+      "execution_count": 59,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def build_prompts_for_columns(powerSubset2023, col_names, index, inference_no, num_cols=4, rows=200):\n",
+        "import itertools\n",
+        "from pathlib import Path\n",
+        "from datetime import datetime\n",
+        "import json\n",
+        "\n",
+        "def build_prompts_for_user_combinations(\n",
+        "    powerSubset2023,        # DataFrame with user-selected columns\n",
+        "    inference_no,           # number of inferences per prompt\n",
+        "    rows,                   # number of rows to sample from each dataset\n",
+        "    combo_sizes,            # int or list/tuple of combination sizes\n",
+        "    folder=\"outputs\"        # folder to save JSON\n",
+        "):\n",
         "    \"\"\"\n",
-        "    Generate prompts for combinations of columns (2, 3, or 4).\n",
+        "    Build prompts for all possible combinations of columns in the DataFrame\n",
+        "    for the specified combination sizes.\n",
         "    \"\"\"\n",
+        "\n",
+        "    # If user passes a single integer, convert to a list\n",
+        "    if isinstance(combo_sizes, int):\n",
+        "        combo_sizes = [combo_sizes]\n",
+        "\n",
+        "    col_names = list(powerSubset2023.columns)\n",
         "    inference_json_list = []\n",
         "\n",
-        "    # Outer loop keeps col_names[index] constant\n",
+        "    for combo_size in combo_sizes:\n",
+        "        # skip invalid sizes\n",
+        "        if combo_size < 1 or combo_size > len(col_names):\n",
+        "            print(f\"⚠️ Skipping invalid combination size: {combo_size}\")\n",
+        "            continue\n",
         "\n",
-        "    for index in range(len(col_names) - (num_cols - 1)):\n",
-        "        for next_index in range(index + 1, len(col_names) - (num_cols - 1)):\n",
-        "            # Select dynamic number of columns\n",
-        "            selected_cols = [col_names[index]] + col_names[next_index:next_index + (num_cols - 1)]\n",
+        "        # generate all combinations of the specified size\n",
+        "        all_combos = list(itertools.combinations(col_names, combo_size))\n",
         "\n",
+        "        for selected_cols in all_combos:\n",
         "            columns_str = \" AND \".join(selected_cols)\n",
         "\n",
-        "            # Fetch data for each column\n",
+        "            # fetch data for each column\n",
         "            col_data_list = [powerSubset2023[:rows][col] for col in selected_cols]\n",
-        "\n",
         "            col_data_str = \" AND \".join(\n",
         "                f\"{col_data.dropna().tolist()} in {col_name}\"\n",
         "                for col_data, col_name in zip(col_data_list, selected_cols)\n",
@@ -386,79 +333,49 @@
         "            prompt = f\"\"\"\n",
         "            User wants to know what {col_data_str} tells about them.\n",
         "            1. {inference_no} inferences about the user based on their online behavior in the form \"interested in X\".\n",
-        "            2. For each interest, rate uncommonness of the interest (scale 1-10, where 1 = most uncommon and 10 = most common).\n",
-        "            Uncommon refers to how rare or atypical an interest is among people who share similar demographic characteristics.\n",
-        "            3. For each interest, rate sensitivity of interest (scale 1–10, where 1 = least sensitive and 10 = most sensitive).\n",
-        "            Sensitivity refers to how likely an interest is to reveal personal, private, or stigmatized information about the user —\n",
-        "            especially information they may not want to be shared, inferred, or acted upon without their consent.\n",
-        "            It includes how much harm, discomfort, or unwanted exposure could result from the disclosure of that interest.\n",
-        "            4. Recommend **EXACTLY ONE** product for *EACH GROUP* identified in step 2.\n",
-        "            5. Recommend **EXACTLY ONE** product based on the **combination of all {inference_no} inferences** for **{columns_str}**.\n",
+        "            2. Rate uncommonness (1–10) and sensitivity (1–10) for each inference.\n",
+        "            3. Recommend **EXACTLY ONE** product for each group.\n",
+        "            4. Recommend **EXACTLY ONE** product based on all {inference_no} inferences for {columns_str}.\n",
         "\n",
-        "            **STRICT JSON OUTPUT FORMAT (No extra text or explanations, just JSON):**\n",
+        "            STRICT JSON OUTPUT ONLY.\n",
+        "            \"\"\"\n",
         "\n",
-        "            ```json\n",
-        "            {{\n",
-        "              \"columns\": \"{columns_str}\",\n",
-        "              \"inferences\": [\n",
-        "                {', '.join([json.dumps({\n",
-        "                    \"inference\": f\"<output for inference {{i+1}}>\",\n",
-        "                    \"explanation_inference\": f\"<explanation for inference {{i+1}}>\",\n",
-        "                    \"commonness\": f\"<Inference {{i+1}} commonness score>\",\n",
-        "                    \"explanation_commonness\": f\"<Explanation for commonness score {{i+1}}>\",\n",
-        "                    \"sensitivity\": f\"<Inference {{i+1}} sensitivity score>\",\n",
-        "                    \"explanation_sensitivity\": f\"<Explanation for sensitivity score {{i+1}}>\",\n",
-        "                    \"recommendation\": f\"<recommendation for inference {{i+1}}>\"\n",
-        "                    }) for i in range(inference_no)])}\n",
-        "                    ],\n",
-        "            \"final_product_recommendation\": {{\n",
-        "              \"ONE recommendation based on ALL inferences\": \"<Product name and company>\"\n",
-        "              }}\n",
-        "            }}\n",
-        "          ```\n",
-        "\"\"\"\n",
-        "        # ✅ Send prompt to GPT and collect response\n",
-        "        print(f\"🔹 Sending prompt to GPT for columns: {columns_str}...\")\n",
-        "        assistant_reply = run_prompt(prompt)\n",
-        "        print(assistant_reply)\n",
-        "        inference_json_list.append(assistant_reply)\n",
+        "            print(f\"🔹 Sending prompt to GPT for columns: {columns_str}...\")\n",
+        "            assistant_reply = run_prompt(prompt)\n",
         "\n",
-        "    # ✅ Increment index only after inner loop finishes\n",
-        "    index += 1\n",
+        "            inference_json_list.append({\n",
+        "                \"combined_cols\": selected_cols,\n",
+        "                \"combo_size\": combo_size,\n",
+        "                \"gpt_output\": assistant_reply\n",
+        "            })\n",
         "\n",
-        "    return inference_json_list\n"
+        "    # Save JSON\n",
+        "    timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+        "    filename = f\"inferences_user_combinations_{timestamp}.json\"\n",
+        "    filepath = Path(folder) / filename\n",
+        "    filepath.parent.mkdir(parents=True, exist_ok=True)\n",
+        "\n",
+        "    return inference_json_list, filepath\n"
       ],
       "metadata": {
         "id": "kW-ffxgQ-_zq"
       },
-      "execution_count": 9,
+      "execution_count": 114,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "col_names = list(powerSubset2023.columns)"
+        "inference_json, output_file = build_prompts_for_user_combinations(\n",
+        "    powerSubset2023,\n",
+        "    inference_no= inference_no,\n",
+        "    rows= 200, #Update number of rows to the full dataset\n",
+        "    combo_sizes= [1,2,3,4],\n",
+        "    folder=\"/content/drive/MyDrive/Dissertation/Study 1/Inference_data/\"\n",
+        ")"
       ],
       "metadata": {
         "id": "Bf62lXqvCgn_"
-      },
-      "execution_count": 10,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# For 2-column combos\n",
-        "inference_c2_json = build_prompts_for_columns(powerSubset2023, col_names, index=0, inference_no=3, num_cols=2)\n",
-        "\n",
-        "# For 4-column combos\n",
-        "inference_c4_json = build_prompts_for_columns(powerSubset2023, col_names, index=0, inference_no=3, num_cols=4)\n",
-        "\n",
-        "# For 3-column combos\n",
-        "inference_c3_json = build_prompts_for_columns(powerSubset2023, col_names, index=0, inference_no=3, num_cols=3)"
-      ],
-      "metadata": {
-        "id": "IA6WEyQWITAB"
       },
       "execution_count": null,
       "outputs": []
@@ -477,46 +394,57 @@
         "    return output_filename"
       ],
       "metadata": {
-        "id": "j11UlxyvTAlN"
+        "id": "F7JWekn1euNo"
       },
-      "execution_count": 23,
+      "execution_count": 122,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "output_filename_ = \"/content/drive/MyDrive/Dissertation/Study 1/Inference_data/.json\" # Define a suitable filename\n",
-        "write_json(output_filename_, [clean_json_string(item) for item in inference_c2_json])"
+        "# Apply clean_json_string to GPT outputs only\n",
+        "for entry in inference_json:\n",
+        "    if isinstance(entry.get(\"gpt_output\"), str):\n",
+        "        entry[\"gpt_output\"] = clean_json_string(entry[\"gpt_output\"])"
+      ],
+      "metadata": {
+        "id": "hBEZT3sX4df-"
+      },
+      "execution_count": 123,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "write_json(\n",
+        "    output_file, inference_json\n",
+        ")"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "2udruheWIq-8",
-        "outputId": "febc1499-0f4a-447b-a66d-8d5fae220d83"
+        "id": "RapP9X2flbVn",
+        "outputId": "cfc79055-6834-4715-f50a-8b14023d3cdd"
       },
-      "execution_count": 24,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✅ JSON saved successfully as /content/drive/MyDrive/Dissertation/Study 1/Inference_data/c2_inferences.json\n"
+            "✅ JSON saved successfully as /content/drive/MyDrive/Dissertation/Study 1/Inference_data/inferences_user_combinations_20250911_222951.json\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'/content/drive/MyDrive/Dissertation/Study 1/Inference_data/c2_inferences.json'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
+              "PosixPath('/content/drive/MyDrive/Dissertation/Study 1/Inference_data/inferences_user_combinations_20250911_222951.json')"
+            ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 124
         }
       ]
     },
